--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "a tool for generating docs from markdown",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"No test specified\""
+    "test": "echo \"No test specified\"",
+    "HUH": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,11 @@
     "klaw": "^3.0.0",
     "less": "^3.11.1",
     "marked": "^0.8.0",
+    "mime-types": "^2.1.26",
     "pug": "^2.0.4"
+  },
+  "bin": {
+    "documentative-build": "bin/build.js",
+    "documentative-serve": "bin/serve.js"
   }
 }
