custom icon + responsive dark/light icon support

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "LICENSE",
     "index.js",
     "bin.js",
-    "resources/documentative.ico",
+    "resources/light-documentative.png",
     "resources/scrollnav.js",
     "resources/styles.less",
     "resources/template.pug"
