--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "minimist": "^1.2.5",
     "pug": "^2.0.4"
   },
+  "devDependencies": {
+    "prettier": "^2.0.2",
+    "@prettier/plugin-pug": "^1.2.0"
+  },
   "bin": {
     "documentative-build": "bin.js",
     "documentative-serve": "bin.js"
