fix broken package.json file whitelist

--- a/package.json
+++ b/package.json
@@ -40,9 +40,10 @@
     "LICENSE",
     "index.js",
     "bin.js",
-    "resources/light-documentative.png",
-    "resources/scrollnav.js",
-    "resources/styles.less",
+    "resources/light-docs.png",
+    "resources/dark-docs.png",
+    "resources/docs.js",
+    "resources/docs.less",
     "resources/template.pug"
   ]
 }
